# ARTC

./: CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  setup.py
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: tests.yml
artc/: vram.py
artc_lite/: __init__.py  core.py  utils.py  version.py
data/: README.md  temperature_sensor.csv
docs/: index.md
examples/: basic_usage.py  sensor_demo.py  streaming_demo.py
examples/arduino/artc_lite_arduino/: artc_lite.cpp  artc_lite.h
tests/: __init__.py  test_compression.py  test_streaming.py  test_visualization.py
tests/test_data/: linear_data.csv  noisy_data.csv  sensor_data.csv
