[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "artc-lite"
version = "1.0.0"
description = "Lightweight IoT Tensor Encoding for sensor data compression"
readme = "README.md"
requires-python = ">=3.7"
license = {text = "MIT"}
authors = [
    {name = "169B", email = "your.email@example.com"}
]
keywords = ["compression", "iot", "sensor", "data", "regression"]

dependencies = [
    "numpy>=1.19.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=3.0",
    "black>=22.0",
    "flake8>=4.0",
]

[project.urls]
Homepage = "https://github.com/169B/ARTC"
Repository = "https://github.com/169B/ARTC"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_functions = "test_*"
